--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Electronics-store</string>
+    <string name="app_name">E-Commerce</string>
+    <string name="forgot_password"><u>Forgot Password</u></string>
+    <string name="signup"><u>Sign Up</u></string>
+    <string name="signin"><u>Sign In</u></string>
 </resources>
